Fixed some jumping in sub-navigation and added some space to the cotainer's top on secondary pages

--- a/src/css/_covid.scss
+++ b/src/css/_covid.scss
@@ -741,6 +741,7 @@ border: none;
 /* Create some space on the bottom before is this page usefull section */
 
 .jumbotron + .container {
-  padding-bottom:2.5rem
+  padding-top:1.5rem;
+  padding-bottom:2.5rem;
 }
 
